--- a/roles/solana-rpc/defaults/main.yml
+++ b/roles/solana-rpc/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for solana-rpc
 solana_user: solana
 rpc_http_port: 8899
-solana_version: v1.18.18
+agave_client_version: v2.0.16
 swapfile_size: 64G
 swapfile_path: /swapfile
 solana_base_path: /home/{{ solana_user }}
